--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,6 @@ pyarrow>=10.0.0
 psutil>=5.9.0
 requests>=2.28.0
 tqdm>=4.64.0
+docker>=7.0.0             
+zstandard>=0.21.0         
+py7zr>=0.20.0             
